<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/share"
        android:orderInCategory="1"
        android:title="Share"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_share_24"/>
    <item android:id="@+id/delete"
        android:orderInCategory="1"
        android:title="Delete"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_delete_24"/>
</menu>